--- a/force-app/main/default/classes/TestInActiveProductTrigger.cls
+++ b/force-app/main/default/classes/TestInActiveProductTrigger.cls
@@ -9,15 +9,8 @@ public class TestInActiveProductTrigger {
         pr.Name='Product 1';
         pr.isActive=true;
         insert pr;
-        
-        // Insert Pricebook
-        PriceBook2 customPriceBook = new PriceBook2();
-        customPriceBook.Name='Custom Pricebook';
-        customPriceBook.IsActive=true;
-        insert customPriceBook;
-        
+
         // Query Standard Price Books
-        Pricebook2 customPriceBookRec=[select Id from Pricebook2 where id=:customPriceBook.Id];
         Id stdPriceBookRecId = Test.getStandardPricebookId();
         
         // Create Standard PriceBookEntry
@@ -27,14 +20,6 @@ public class TestInActiveProductTrigger {
         stdPriceBookEntry.UnitPrice=2000;
         stdPriceBookEntry.IsActive=true;
         insert stdPriceBookEntry;
-        
-        // Create Custom PriceBookEntry
-        PriceBookEntry customPriceBookEntry = new PriceBookEntry();
-        customPriceBookEntry.Product2Id=pr.Id;
-        customPriceBookEntry.Pricebook2Id=customPriceBookRec.Id;
-        customPriceBookEntry.UnitPrice=5000;
-        customPriceBookEntry.IsActive=true;
-        insert customPriceBookEntry;
         
         // Create Opportunity
         Opportunity opp = new Opportunity();
@@ -46,10 +31,15 @@ public class TestInActiveProductTrigger {
         // Add product and Pricebook to the particular opportunity using OpportunityLineItem 
         OpportunityLineItem oppLineItem = new OpportunityLineItem();
         oppLineItem.OpportunityId = opp.Id;
-        oppLineItem.PricebookEntryId = customPriceBookEntry.Id;
+        oppLineItem.PricebookEntryId = stdPriceBookEntry.Id;
         oppLineItem.UnitPrice = 7000;
         oppLineItem.Quantity = 5;
         insert oppLineItem;
+
+        Test.startTest();
+        pr.IsActive = false;
+        Update pr;
+        Test.stopTest();
     }
 
 }
