Edit InActiveProductTrigger(add managers, add antiloop check, delete IsTriggerContext, add new constants)

--- a/force-app/main/default/classes/Product2TriggerHandler.cls
+++ b/force-app/main/default/classes/Product2TriggerHandler.cls
@@ -1,39 +1,38 @@
 public with sharing class Product2TriggerHandler {
+	private static final String NEW_TASK_SUBJECT = 'Old model deal!!!';
+	private static final String NEW_TASK_STATUS = 'New';
+	private static final String NEW_TASK_PRIORITY = 'High';
+	private static final Id CALL_RECORD_TYPE_ID;
 
-    private Boolean m_isExecuting = false;
+	public static Boolean IS_FIRST_TIME = true;
 
-    public Product2TriggerHandler(){}
+	public Product2TriggerHandler() {
+		CALL_RECORD_TYPE_ID = [SELECT Id, Name FROM RecordType WHERE Name = 'Call' LIMIT 1].Id;
+	}
 
-    public Product2TriggerHandler(Boolean isExecuting) {
-        m_isExecuting = isExecuting;
-    }
+	public void OnAfterUpdate(Product2[] triggerProducts) {
+		List<Product2> inactiveProducts = Product2Manager.getInactiveProducts(triggerProducts);
 
-    public void OnAfterUpdate(Product2[] triggerProducts){
-        List<Product2> inActiveProducts = [SELECT Id, Name FROM Product2 
-            WHERE Id IN :triggerProducts AND IsActive = FALSE];
+		if (inactiveProducts.size() > 0) {
+			List<Task> callTask = new List<Task>();
 
-        if(inActiveProducts.size()>0){
-            final Id CALL_RECORD_TYPE_ID = [SELECT Id, Name FROM RecordType 
-            WHERE Name = 'Call' limit 1].Id;
-    
-            List<Task> callTask = new List<Task>();    
-        
-            List<OpportunityLineItem> oppInactiveProd = [SELECT Id, Name, 
-                OpportunityId, Product2Id FROM OpportunityLineItem 
-                WHERE Product2Id IN :inActiveProducts];
-    
-            for (OpportunityLineItem oppLine : oppInactiveProd){
-                Task newOpportunityTask = new Task(RecordTypeId = CALL_RECORD_TYPE_ID, 
-                    Subject = 'Old model deal!!!', Status = 'New',
-                    Auto_Created__c = TRUE, ActivityDate = Date.today().toStartOfMonth().addMonths(1), 
-                    Priority = 'High', WhatId = oppLine.OpportunityId);
-                callTask.add(newOpportunityTask);
-            }
-            Insert callTask;
-        }
-    }
+			List<OpportunityLineItem> oppInactiveProd = OpportunityLineItemManager.getOpportunityWithInactiveProducts(
+				inactiveProducts
+			);
 
-    public Boolean IsTriggerContext{
-        get{return m_isExecuting;}
-    }
+			for (OpportunityLineItem oppLine : oppInactiveProd) {
+				Task newOpportunityTask = new Task(
+					RecordTypeId = CALL_RECORD_TYPE_ID,
+					Subject = NEW_TASK_SUBJECT,
+					Status = NEW_TASK_STATUS,
+					Priority = NEW_TASK_PRIORITY,
+					Auto_Created__c = true,
+					WhatId = oppLine.OpportunityId,
+					ActivityDate = Date.today().toStartOfMonth().addMonths(1)
+				);
+				callTask.add(newOpportunityTask);
+			}
+			insert callTask;
+		}
+	}
 }
